samples/task/valid/R31.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><stepxmp><p>Example</p></stepxmp><stepresult><p>This is the result of the step.</p></stepresult></step></steps>
  </taskbody>
</task>