samples/task/invalid/R42.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><stepresult><p>Result</p></stepresult><stepxmp><p>Example</p></stepxmp></step></steps>
  </taskbody>
</task>